--- a/portfolio/gallery.html
+++ b/portfolio/gallery.html
@@ -41,6 +41,17 @@
         </div>
         <marquee id="bearwalk">
             <img src="images/bearwalk.gif">
+            <img src="images/bearwalk.gif">
+            <img src="images/bearwalk.gif">
+            <img src="images/bearwalk.gif">
+            <img src="images/bearwalk.gif">
+            <img src="images/bearwalk.gif">
+            <img src="images/bearwalk.gif">
+            <img src="images/bearwalk.gif">
+            <img src="images/bearwalk.gif">
+            <img src="images/bearwalk.gif">
+            <img src="images/bearwalk.gif">
+            <img src="images/bearwalk.gif">
         </marquee>
         <hr>
         <div id="categories">
