--- a/portfolio/blog.html
+++ b/portfolio/blog.html
@@ -47,21 +47,40 @@
         <div id="blog">
             <div class="row">
                 <div class="leftcolumn">
-                  <div class="card">
-                    <h2></h2>
-                    <h5>Blog Entry, Jun 7, 2024</h5>
-                    <p><sub>2:30 AM</sub></p>
-                    <div class="blogimg" style="height:200px;">
-                        <img id="cramp" src="images/handcramp.png">
+                    <div id="blog2" class="card">
+                        <h2></h2>
+                        <h5>Blog Entry, Jun 8, 2024</h5>
+                        <p><sub>2:04 AM</sub></p>
+                        <div class="blogimg" style="height:200px;">
+                            <img 
+                                width="700px"
+                                src="images/artsession.png"
+                            >
+                        </div>
+                        <p>
+                            Art session with my sister
+                        </p>
                     </div>
-                    <p>
-                        Im so worried my hands will give out since I'm on my
-                        computer 24/7 - I've added a few more animated and static graphics to this website, along with music I like : )
-                    </p>
-                  </div>
-                  <div id="bearhr">
-                    <img id="bearhead" src="images/bearhead.png">
-                </div>
+                    <div id="bearhr">
+                        <img id="bearhead" src="images/bearhead.png">
+                    </div>
+                    <div id="blog1" class="card">
+                        <h2></h2>
+                        <h5>Blog Entry, Jun 7, 2024</h5>
+                        <p><sub>2:30 AM</sub></p>
+                        <div class="blogimg" style="height:200px;">
+                            <img id="cramp" src="images/handcramp.png">
+                        </div>
+                        <p>
+                            Im so worried my hands will give out since I'm on my
+                            computer 24/7 - I've added a few more animated and 
+                            static graphics to this website, along with music I 
+                            like :)
+                        </p>
+                    </div>
+                    <div id="bearhr">
+                        <img id="bearhead" src="images/bearhead.png">
+                    </div>
                 </div>
                 <div class="rightcolumn">
                   <div id="blog1" class="card">
@@ -74,8 +93,8 @@
                   <div class="card">
                     <h3>Popular Post</h3>
                     <div class="blogimg">
-                        <a href="#blog1">
-                            <img id="popular" src="images/handcramp.png">
+                        <a href="#blog2">
+                            <img id="popular" src="images/artsession.png">
                         </a>
                     </div>
                   </div>
