--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -112,6 +112,12 @@
                                         <i class="fa-solid fa-music"></i>
                                     </a>
                                 </li>
+                                <li>
+                                    <a href="https://x.com/dei_genetrix">
+                                        Devi Mccallion
+                                        <i class="fa-solid fa-music"></i>
+                                    </a>
+                                </li>
                             </ul>
                             <img id="beartune" src="images/beartune.gif">
                         </div>
