--- a/portfolio/blog.html
+++ b/portfolio/blog.html
@@ -49,6 +49,31 @@
                 <div class="leftcolumn">
                     <div id="blog2" class="card">
                         <h2></h2>
+                        <h5>Blog Entry, Jun 9, 2024</h5>
+                        <p><sub>10:56 PM</sub></p>
+                        <div class="blogimg" style="height:200px;">
+                            <img 
+                                width="200px"
+                                src="images/sotired.png"
+                            >
+                        </div>
+                        <p>
+                            Updated a few things - added an illustration page
+                            and I'm currently working on an animation commission
+                        </p>
+                        <p>
+                            I feel so drained
+                        </p>
+                        <p>
+                            Wondering if my website music should change monthly?
+                        </p>
+                        <a href="illustrations.html">Illustration Page</a>
+                    </div>
+                    <div id="bearhr">
+                        <img id="bearhead" src="images/bearhead.png">
+                    </div>
+                    <div id="blog2" class="card">
+                        <h2></h2>
                         <h5>Blog Entry, Jun 8, 2024</h5>
                         <p><sub>2:04 AM</sub></p>
                         <div class="blogimg" style="height:200px;">
