--- a/portfolio/illustrations.html
+++ b/portfolio/illustrations.html
@@ -35,32 +35,13 @@
             <a href="about.html">ABOUT</a>
             <a href="contact.html">CONTACT</a>
         </div>
-        <div id="graphics">
-            <a href="classwork.html" id="classwork">
-                <img 
-                    src="images/classwork.gif"
-                    alt="classwork"
-                >
-            </a>
-            <a href="logos.html" id="logos">
-                <img 
-                    src="images/logos.gif"
-                    alt="logos"
-                >
-            </a>
-            <a href="commissions.html" id="commissions">
-                <img 
-                    class="commissionsimg"
-                    src="images/commissions.gif"
-                    alt="commissions"
-                >
-            </a>
-            <a href="illustrations.html" id="illustrations">
-                <img 
-                    src="images/ILLUSTRATIONS.gif"
-                    alt="illustrations"
-                >
-            </a>
+        <div id="images">
+            <img id="bearhead" src="images/bearhead.png">
+            <h1>ILLUSTRATIONS</h1>
+            <div class="hvrimg">
+                <div id="image-hover">
+                </div>
+            </div>
         </div>
         <hr>
         <p id="bottomtext"> © 2024 Aaron Siers</p>
