--- a/portfolio/commissions.html
+++ b/portfolio/commissions.html
@@ -44,9 +44,9 @@
                 alt="tsuki koinu illustration"
             >
             <img 
-                class="logosimg"
-                src="images/haikocomm.jpeg"
-                alt="haiko commission"
+                class="commissionsimg"
+                src="images/GlassairCommission.png"
+                alt="glassair commission"
             >
         </div>
         <hr>
