--- a/portfolio/blog.html
+++ b/portfolio/blog.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>photography</title>
+        <title>Blog</title>
         <link href="css/style.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/4189cca588.js" crossorigin="anonymous"></script>
         <link rel="icon" href="https://media.discordapp.net/attachments/922010128721534976/1247653170419728484/image.png?ex=6664c390&is=66637210&hm=9c5a7d3e30bfb2fada314bcf9425d7927df18183710aba4c8822e4c571a07655&=&format=webp&quality=lossless&width=683&height=683">
@@ -62,7 +62,8 @@
                             and I'm currently working on an animation commission
                         </p>
                         <p>
-                            I feel so drained
+                            I feel so drained - I still have to work on making
+                            this site responsive
                         </p>
                         <p>
                             Wondering if my website music should change monthly?
