--- a/portfolio/graphics.html
+++ b/portfolio/graphics.html
@@ -36,6 +36,7 @@
             <a href="contact.html">CONTACT</a>
         </div>
         <div id="graphics">
+            <img id="bearhead" src="images/bearhead.png">
             <a href="classwork.html" id="classwork">
                 <img 
                     src="images/classwork.gif"
