--- a/portfolio/classwork.html
+++ b/portfolio/classwork.html
@@ -6,7 +6,7 @@
         <title>Classwork</title>
         <link href="css/style.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/4189cca588.js" crossorigin="anonymous"></script>
-        <link rel="icon" href="https://media.discordapp.net/attachments/922010128721534976/1247653170419728484/image.png?ex=6664c390&is=66637210&hm=9c5a7d3e30bfb2fada314bcf9425d7927df18183710aba4c8822e4c571a07655&=&format=webp&quality=lossless&width=683&height=683">
+        <link rel="icon" href="images/ICONLOGO.png">
     </head>
     <body>
         <div id="navbar-top">
@@ -58,6 +58,22 @@
                 src="images/characterdesign.png"
                 alt="character design"
             >
+        </div>
+        <div id="audio3">
+            <audio controls autoplay loop id="lowaudio">
+                <source src="audio/Song12.mp3" type="audio/mpeg">
+            </audio>
+            <script>
+                var audio = document.getElementById("lowaudio");
+                audio.volume = 0.1;
+            </script>
+        </div>
+        <div id="homebutton">
+            <a href="index.html">
+                <i class="fa-solid fa-star"></i>
+                <p>HOME</p>
+                <i class="fa-solid fa-star"></i>
+            </a>
         </div>
         <hr>
         <p id="bottomtext"> © 2024 Aaron Siers</p>
