--- a/portfolio/photography.html
+++ b/portfolio/photography.html
@@ -6,7 +6,7 @@
         <title>Photography</title>
         <link href="css/style.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/4189cca588.js" crossorigin="anonymous"></script>
-        <link rel="icon" href="https://media.discordapp.net/attachments/922010128721534976/1247653170419728484/image.png?ex=6664c390&is=66637210&hm=9c5a7d3e30bfb2fada314bcf9425d7927df18183710aba4c8822e4c571a07655&=&format=webp&quality=lossless&width=683&height=683">
+        <link rel="icon" href="images/ICONLOGO.png">
     </head>
     <body>
         <div id="navbar-top">
@@ -39,25 +39,25 @@
             <img id="bearhead" src="images/bearhead.png">
             <h3>PHOTOGRAPHY</h3>
             <div class="horizontal-masonry-gallery">
-                <img src="images/bear3:4.jpg" alt="coffee">
-                <img src="images/bearthrow.jpg" alt="coffee">
+                <img src="images/bear3:4.jpg" alt="bear 3/4">
+                <img src="images/bearthrow.jpg" alt="bear throw">
                 <img 
                     src="images/MattePainting_GDWD103_ASiers_V4.jpg" 
-                    alt="coffee"
+                    alt="matte painting"
                 >
                 <img 
                     src="images/PhotographyCollage_GDWD103_ASiers_V4.jpg" 
-                    alt="coffee"
+                    alt="collage"
                 >
-                <img src="images/Surreal.jpg" alt="coffee">
-                <img src="images/Conceptual.jpg" alt="coffee">
+                <img src="images/Surreal.jpg" alt="surreal">
+                <img src="images/Conceptual.jpg" alt="conceptual">
                 <img 
                     src="images/ProductPhotography_GDWD_ASiers_V2.jpg" 
-                    alt="coffee"
+                    alt="product photography"
                 >
                 <img 
                     src="images/ProductPhotography_GDWD_ASiers_V3.jpg" 
-                    alt="coffee"
+                    alt="product photography"
                 >
             </div>
         </div>
