--- a/portfolio/graphics.html
+++ b/portfolio/graphics.html
@@ -35,8 +35,10 @@
             <a href="about.html">ABOUT</a>
             <a href="contact.html">CONTACT</a>
         </div>
+        <div id="bearheadg">
+            <img src="images/bearhead.png">
+        </div>
         <div id="graphics">
-            <img id="bearhead" src="images/bearhead.png">
             <a href="classwork.html" id="classwork">
                 <img 
                     src="images/classwork.gif"
