--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -118,6 +118,12 @@
                                         <i class="fa-solid fa-music"></i>
                                     </a>
                                 </li>
+                                <li>
+                                    <a href="https://x.com/emamouse">
+                                        Emamouse
+                                        <i class="fa-solid fa-music"></i>
+                                    </a>
+                                </li>
                             </ul>
                             <img id="beartune" src="images/beartune.gif">
                         </div>
@@ -149,12 +155,21 @@
                 </div>
             </div>
         </div>
-        <div id="homebutton">
-            <a href="index.html">
-                <i class="fa-solid fa-star"></i>
-                <p>HOME</p>
-                <i class="fa-solid fa-star"></i>
-            </a>
+        <div id="buttons">
+            <div id="homebutton">
+                <a href="gallery.html">
+                    <i class="fa-solid fa-star"></i>
+                    <p>BACK</p>
+                    <i class="fa-solid fa-star"></i>
+                </a>
+            </div>
+            <div id="homebutton">
+                <a href="index.html">
+                    <i class="fa-solid fa-star"></i>
+                    <p>HOME</p>
+                    <i class="fa-solid fa-star"></i>
+                </a>
+            </div>
         </div>
         <hr>
         <p id="bottomtext"> © 2024 Aaron Siers</p>
