--- a/portfolio/classwork.html
+++ b/portfolio/classwork.html
@@ -68,12 +68,21 @@
                 audio.volume = 0.1;
             </script>
         </div>
-        <div id="homebutton">
-            <a href="index.html">
-                <i class="fa-solid fa-star"></i>
-                <p>HOME</p>
-                <i class="fa-solid fa-star"></i>
-            </a>
+        <div id="buttons">
+            <div id="homebutton">
+                <a href="graphics.html">
+                    <i class="fa-solid fa-star"></i>
+                    <p>BACK</p>
+                    <i class="fa-solid fa-star"></i>
+                </a>
+            </div>
+            <div id="homebutton">
+                <a href="index.html">
+                    <i class="fa-solid fa-star"></i>
+                    <p>HOME</p>
+                    <i class="fa-solid fa-star"></i>
+                </a>
+            </div>
         </div>
         <hr>
         <p id="bottomtext"> © 2024 Aaron Siers</p>
