--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
         <title>homepage</title>
         <link href="css/style.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/4189cca588.js" crossorigin="anonymous"></script>
-        <link rel="icon" href="https://shorturl.at/PKdFx">
-        <script>
-            var audio = document.getElementById("lowaudio");
-            audio.volume = 0.1;
-        </script>
+        <link rel="icon" href="images/ICONLOGO.png">
     </head>
     <body>
         <div id="spacer">
