--- a/portfolio/photography.html
+++ b/portfolio/photography.html
@@ -37,10 +37,16 @@
         </div>
         <div id="photos">
             <img id="bearhead" src="images/bearhead.png">
-            <h3>PHOTOGRAPHY</h3>
+            <h3>PHOTOGRAPHY & PHOTOSHOP</h3>
             <div class="horizontal-masonry-gallery">
-                <img src="images/bear3:4.jpg" alt="bear 3/4">
-                <img src="images/bearthrow.jpg" alt="bear throw">
+                <img 
+                    src="images/bear3:4.jpg" 
+                    alt="bear 3/4 (shot by Elijah Pollock)"
+                >
+                <img 
+                    src="images/bearthrow.jpg" 
+                    alt="bear throw (shot by Elijah Pollock)"
+                >
                 <img 
                     src="images/MattePainting_GDWD103_ASiers_V4.jpg" 
                     alt="matte painting"
