--- a/portfolio/webgraphics.html
+++ b/portfolio/webgraphics.html
@@ -58,7 +58,7 @@
         </div>
         <div id="buttons">
             <div id="homebutton">
-                <a href="graphics.html">
+                <a href="gallery.html">
                     <i class="fa-solid fa-star"></i>
                     <p>BACK</p>
                     <i class="fa-solid fa-star"></i>
