--- a/portfolio/blog.html
+++ b/portfolio/blog.html
@@ -47,6 +47,28 @@
         <div id="blog">
             <div class="row">
                 <div class="leftcolumn">
+                    <div id="blog4" class="card">
+                        <h2></h2>
+                        <h5>Blog Entry, Jun 9, 2024</h5>
+                        <p><sub>10:56 PM</sub></p>
+                        <div class="blogimg" style="height:200px;">
+                            <img 
+                                id="WIPimg"
+                                src="images/WIPscreenshot.png"
+                            >
+                        </div>
+                        <p>
+                            I'm finally out of my apartment but not sure if i
+                            sent the lease break msg to the right email.
+                        </p>
+                        <p>
+                            Currently working on a short fan music video for 
+                            Adew
+                        </p>
+                        <a href="https://drive.google.com/file/d/1ygUMwE9rkOhTFPiAYKJ-bgv7dST42LID/view?usp=sharing">
+                            WIP Animation
+                        </a>
+                    </div>
                     <div id="blog3" class="card">
                         <h2></h2>
                         <h5>Blog Entry, Jun 9, 2024</h5>
