--- a/portfolio/blog.html
+++ b/portfolio/blog.html
@@ -69,6 +69,9 @@
                             WIP Animation
                         </a>
                     </div>
+                    <div id="bearhr">
+                        <img id="bearhead" src="images/bearhead.png">
+                    </div>
                     <div id="blog3" class="card">
                         <h2></h2>
                         <h5>Blog Entry, Jun 9, 2024</h5>
