--- a/portfolio/blog.html
+++ b/portfolio/blog.html
@@ -55,6 +55,7 @@
                             <img 
                                 id="WIPimg"
                                 src="images/WIPscreenshot.png"
+                                width="15vw"
                             >
                         </div>
                         <p>
