--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -62,6 +62,15 @@
                     </a>
                     <p>Aaron Siers</p>
                 </div>
+                <div class="fourthwall">
+                    <a 
+                        href="https://aaronsiers-shop.fourthwall.com/"
+                    >
+                        <div id="fw-hover">
+                        </div>
+                    </a>
+                    <p>aaronsiers-shop</p>
+                </div>
             </div>
         </div>
         <div id="audio3">
