--- a/portfolio/illustrations.html
+++ b/portfolio/illustrations.html
@@ -42,6 +42,9 @@
                 <div id="image-hover">
                 </div>
             </div>
+            <div id="telyn">
+                <img id="fairy" src="images/FAIRY.png">
+            </div>
         </div>
         <div id="audio3">
             <audio controls autoplay loop id="lowaudio">
