--- a/portfolio/blog.html
+++ b/portfolio/blog.html
@@ -47,10 +47,30 @@
         <div id="blog">
             <div class="row">
                 <div class="leftcolumn">
+                    <div id="blog5" class="card">
+                        <h2></h2>
+                        <h5>Blog Entry, Jul 18, 2024</h5>
+                        <p><sub>1:33 PM</sub></p>
+                        <div class="blogimg" style="height:200px;">
+                            <img 
+                                id="selfimg"
+                                src="images/over.png"
+                            >
+                        </div>
+                        <p>
+                            I feel like I'm losing my creativity and sense of
+                            self
+                        </p>
+                        <p>
+                            I don't know what to do anymore
+                        </p>
+                    </div>
+                    <div id="bearhr">
+                    </div>
                     <div id="blog4" class="card">
                         <h2></h2>
-                        <h5>Blog Entry, Jun 9, 2024</h5>
-                        <p><sub>10:56 PM</sub></p>
+                        <h5>Blog Entry, Jun 18, 2024</h5>
+                        <p><sub>7:24 PM</sub></p>
                         <div class="blogimg" style="height:200px;">
                             <img 
                                 id="WIPimg"
@@ -143,8 +163,8 @@
                   <div class="card">
                     <h3>Popular Post</h3>
                     <div class="blogimg">
-                        <a href="#blog2">
-                            <img id="popular" src="images/artsession.png">
+                        <a href="#blog5">
+                            <img id="popular" src="images/over.png">
                         </a>
                     </div>
                   </div>
