--- a/portfolio/illustrations.html
+++ b/portfolio/illustrations.html
@@ -45,6 +45,17 @@
             <div id="telyn">
                 <img id="fairy" src="images/FAIRY.png">
             </div>
+            <div id="af">
+                <div>
+                    <img id="creature" src="images/Artfight1.png">
+                </div>
+                <div>
+                    <img id="catgirl" src="images/Artfight2.png">
+                </div>
+                <div>
+                    <img id="catboy" src="images/Artfight3.png">
+                </div>
+            </div>
         </div>
         <div id="audio3">
             <audio controls autoplay loop id="lowaudio">
