--- a/portfolio/blog.html
+++ b/portfolio/blog.html
@@ -66,6 +66,7 @@
                         </p>
                     </div>
                     <div id="bearhr">
+                        <img id="bearhead" src="images/bearhead.png">
                     </div>
                     <div id="blog4" class="card">
                         <h2></h2>
