--- a/portfolio/blog.html
+++ b/portfolio/blog.html
@@ -47,6 +47,26 @@
         <div id="blog">
             <div class="row">
                 <div class="leftcolumn">
+                    <div id="blog6" class="card">
+                        <h2></h2>
+                        <h5>Blog Entry, Jul 24, 2024</h5>
+                        <p><sub>1:12 PM</sub></p>
+                        <div class="blogimg" style="height:200px;">
+                            <img 
+                                id="singimg"
+                                src="images/performance.png"
+                            >
+                        </div>
+                        <p>
+                            I performed at Lucky straws boba a few days ago
+                        </p>
+                        <a href="https://menu.luckystrawsboba.com/">
+                            Lucky Straws Boba Website
+                        </a>
+                    </div>
+                    <div id="bearhr">
+                        <img id="bearhead" src="images/bearhead.png">
+                    </div>
                     <div id="blog5" class="card">
                         <h2></h2>
                         <h5>Blog Entry, Jul 18, 2024</h5>
