--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -54,7 +54,7 @@
                             <p>
                                 I've taken Graphic Design & Photography 
                                 electives from middle school to highschool, and 
-                                I'm currently attending F.I.R.S.T. Institute.
+                                I'm about to graduate F.I.R.S.T. Institute.
                             </p>
                             <p>
                                 I've been drawing since I was young, and as I 
@@ -62,9 +62,9 @@
                                 could impress people.
                             </p>
                             <p>
-                                I hope to further work on my art and find a 
-                                style i can stick with, so I can continue to 
-                                create artwork that accurately represents me.
+                                My work mostly revolves around cute and simple
+                                themes. Although, I do like to be flexible with 
+                                different art styles and experiment.
                             </p>
                             <p>
                                 I use Adobe applications such as Photoshop and 
