--- a/portfolio/classwork.html
+++ b/portfolio/classwork.html
@@ -35,29 +35,38 @@
             <a href="about.html">ABOUT</a>
             <a href="contact.html">CONTACT</a>
         </div>
-        <div id="images">
+        <div id="classtitle">
             <img id="bearhead" src="images/bearhead.png">
             <h1>CLASSWORK</h1>
-            <img 
-                class="classworkimg"
-                src="images/CustomLogoProjectFinal_101_ASiers_V4.png"
-                alt="logo project"
-            >
-            <img 
-                class="classworkimg"
-                src="images/FarmersMarketPoster_101_ASiers_Final.jpg"
-                alt="farmers market poster"
-            >
-            <img 
-                class="classworkimg"
-                src="images/architecturalillustration.png"
-                alt="architectural illustration"
-            >
-            <img 
-                class="classworkimg"
-                src="images/characterdesign.png"
-                alt="character design"
-            >
+        </div>
+        <div id="images">
+            <div class="horizontal-masonry-gallery">
+                <img 
+                    class="classworkimg"
+                    src="images/FarmersMarketPoster_101_ASiers_Final.jpg"
+                    alt="farmers market poster"
+                >
+                <img 
+                    class="classworkimg"
+                    src="images/architecturalillustration.png"
+                    alt="architectural illustration"
+                >
+                <img 
+                    class="classworkimg"
+                    src="images/characterdesign.png"
+                    alt="character design"
+                >
+                <img 
+                    class="classworkimg"
+                    src="images/qteaboba.png"
+                    alt="q tea boba stickers"
+                >
+                <img 
+                    class="classworkimg"
+                    src="images/XBoxControllerDesigns_GDWD_ASiers_Final.png"
+                    alt="xbox package"
+                >
+            </div>
         </div>
         <div id="audio3">
             <audio controls autoplay loop id="lowaudio">
