--- a/portfolio/illustrations.html
+++ b/portfolio/illustrations.html
@@ -45,6 +45,9 @@
             <div id="telyn">
                 <img id="fairy" src="images/FAIRY.png">
             </div>
+            <div id="aria">
+                <img id="ariafiori" src="images/aria.png">
+            </div>
             <div id="af">
                 <div>
                     <img id="creature" src="images/Artfight1.png">
