--- a/portfolio/logos.html
+++ b/portfolio/logos.html
@@ -37,6 +37,18 @@
         </div>
         <div id="images">
             <img id="bearhead" src="images/bearhead.png">
+            <h1>CLASSWORK LOGOS</h1>
+            <img 
+                class="classworkimg"
+                src="images/CustomLogoProjectFinal_101_ASiers_V4.png"
+                alt="logo project"
+            >
+            <img 
+                class="classworkimg"
+                src="images/logos.png"
+                alt="logo project"
+            >
+            <img id="bearhead" src="images/bearhead.png">
             <h1>VTUBER LOGOS</h1>
             <img 
                 class="logosimg"
