--- a/portfolio/blog.html
+++ b/portfolio/blog.html
@@ -35,18 +35,30 @@
             <a href="about.html">ABOUT</a>
             <a href="contact.html">CONTACT</a>
         </div>
-        <div id="audio3">
-            <audio controls autoplay loop id="lowaudio">
-                <source src="audio/Song8.mp3" type="audio/mpeg">
-            </audio>
-            <script>
-                var audio = document.getElementById("lowaudio");
-                audio.volume = 0.1;
-            </script>
-        </div>
         <div id="blog">
             <div class="row">
                 <div class="leftcolumn">
+                    <div id="blog5" class="card">
+                        <h2></h2>
+                        <h5>Blog Entry, Aug 5, 2024</h5>
+                        <p><sub>5:28 PM</sub></p>
+                        <div class="blogimg" style="height:200px;">
+                            <img 
+                                id="selfimg"
+                                src="images/WN2.png"
+                            >
+                        </div>
+                        <p>
+                            This website still needs work on responsiveness,
+                            it's best to view this site on PC
+                        </p>
+                        <p>
+                            Mobile/Tablet viewers be warned
+                        </p>
+                    </div>
+                    <div id="bearhr">
+                        <img id="bearhead" src="images/bearhead.png">
+                    </div>
                     <div id="blog6" class="card">
                         <h2></h2>
                         <h5>Blog Entry, Jul 24, 2024</h5>
@@ -63,27 +75,6 @@
                         <a href="https://menu.luckystrawsboba.com/">
                             Lucky Straws Boba Website
                         </a>
-                    </div>
-                    <div id="bearhr">
-                        <img id="bearhead" src="images/bearhead.png">
-                    </div>
-                    <div id="blog5" class="card">
-                        <h2></h2>
-                        <h5>Blog Entry, Jul 18, 2024</h5>
-                        <p><sub>1:33 PM</sub></p>
-                        <div class="blogimg" style="height:200px;">
-                            <img 
-                                id="selfimg"
-                                src="images/over.png"
-                            >
-                        </div>
-                        <p>
-                            I feel like I'm losing my creativity and sense of
-                            self
-                        </p>
-                        <p>
-                            I don't know what to do anymore
-                        </p>
                     </div>
                     <div id="bearhr">
                         <img id="bearhead" src="images/bearhead.png">
@@ -181,11 +172,20 @@
                     </div>
                     <p>I just talk about my day or events here</p>
                   </div>
+                  <div id="audio3">
+                        <audio controls autoplay loop id="lowaudio">
+                            <source src="audio/Song8.mp3" type="audio/mpeg">
+                        </audio>
+                        <script>
+                            var audio = document.getElementById("lowaudio");
+                            audio.volume = 0.1;
+                        </script>
+                    </div>
                   <div class="card">
                     <h3>Popular Post</h3>
                     <div class="blogimg">
-                        <a href="#blog5">
-                            <img id="popular" src="images/over.png">
+                        <a href="#blog6">
+                            <img id="popular" src="images/performance.png">
                         </a>
                     </div>
                   </div>
