--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -46,13 +46,20 @@
                     width="200px"
                 >
                 <p>
-                    Click here to learn more about me if you want
+                    Click here to learn more
+                </p>
+                <p>
+                    ▾
                 </p>
                 <a href="about.html">About Me</a>
             </div>
         </div>
         <div id="audio">
-            <p>Heres some music to listen to if you get bored</p>
+            <p>This website has music on each page!</p>
+            <p>
+                Feel free to pause it using the web player or mute the site 
+                altogether
+            </p>
             <img src="images/dance.gif">
             <audio controls autoplay loop id="lowaudio">
                 <source src="audio/Song2.mp3" type="audio/mpeg">
@@ -117,6 +124,9 @@
                 </a>
             </div>
         </div>
+        <p id="warning">
+            All graphics on this site were drawn and/or animated by me!
+        </p>
         <hr>
         <p id="bottomtext"> © 2024 Aaron Siers</p>
     </body>
