--- a/portfolio/illustrations.html
+++ b/portfolio/illustrations.html
@@ -35,7 +35,7 @@
             <a href="about.html">ABOUT</a>
             <a href="contact.html">CONTACT</a>
         </div>
-        <div id="images">
+        <div id="images2">
             <img id="bearhead" src="images/bearhead.png">
             <h1>ILLUSTRATIONS</h1>
             <div class="hvrimg">
