--- a/portfolio/blog.html
+++ b/portfolio/blog.html
@@ -38,6 +38,25 @@
         <div id="blog">
             <div class="row">
                 <div class="leftcolumn">
+                    <div id="blog6" class="card">
+                        <h2></h2>
+                        <h5>Blog Entry, Oct 20, 2024</h5>
+                        <p><sub>7:22 AM</sub></p>
+                        <div class="blogimg" style="height:200px;">
+                            <img 
+                                id="singimg"
+                                src="images/bearwalk.gif"
+                            >
+                        </div>
+                        <p>
+                            I've been enjoying creating graphics as an intern.
+                            Not sure if I have permission to post them on any 
+                            platform,, but I'm happy to be apart of something
+                        </p>
+                    </div>
+                    <div id="bearhr">
+                        <img id="bearhead" src="images/bearhead.png">
+                    </div>
                     <div id="blog5" class="card">
                         <h2></h2>
                         <h5>Blog Entry, Aug 5, 2024</h5>
