--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -49,17 +49,12 @@
                             <p>
                                 My name is Aaron Siers. I'm a filipino trans man 
                                 and a freelance graphic designer/artist. 
-                                I turned 20 this year.
+                                I'm 20 this year.
                             </p>
                             <p>
                                 I've taken Graphic Design & Photography 
                                 electives from middle school to highschool, and 
-                                I'm about to graduate F.I.R.S.T. Institute.
-                            </p>
-                            <p>
-                                I've been drawing since I was young, and as I 
-                                grew up I wanted to improve and make art that 
-                                could impress people.
+                                I've graduated from F.I.R.S.T. Institute.
                             </p>
                             <p>
                                 My work mostly revolves around cute and simple
