--- a/portfolio/animation.html
+++ b/portfolio/animation.html
@@ -68,6 +68,29 @@
                 <img id="spin" src="images/ok.gif">
                 <img id="cry" src="images/expression.gif">
             </div>
+            <img id="bearhead" src="images/bearhead.png">
+            <h2>Internship</h2>
+            <div id="crosswords">
+                <img id="crossword" src="images/INTERNSHIP/CROSSWORD4.gif">
+                <img id="crossword" src="images/INTERNSHIP/CROSSWORD3_ANSWERS.gif">
+                <img id="crossword" src="images/INTERNSHIP/ANSWERS.gif">
+            </div>
+            <div id="DWC">
+                <img id="WordCloud" src="images/INTERNSHIP/DWC_1.gif">
+                <img id="WordCloud" src="images/INTERNSHIP/DWC_2.gif">
+                <img id="WordCloud" src="images/INTERNSHIP/DWC_3.gif">
+            </div>
+            <div id="misc">
+                <img id="etc" src="images/INTERNSHIP/CRANEWAVE_DRAFT.gif">
+                <img id="etc" src="images/INTERNSHIP/GOTV.gif">
+                <img id="etc" src="images/INTERNSHIP/FLAAPPlogo.gif">
+            </div>
+            <div id="BOAF">
+                <video width="320" height="240" controls>
+                    <source src="images/INTERNSHIP/ANIMATION.mp4" type="video/mp4">
+                    <source src="movie.ogg" type="video/ogg">
+                </video>
+            </div>
         </div>
         <div id="audio3">
             <audio controls autoplay loop id="lowaudio">
