--- a/portfolio/blog.html
+++ b/portfolio/blog.html
@@ -38,6 +38,23 @@
         <div id="blog">
             <div class="row">
                 <div class="leftcolumn">
+                    <div id="blog7" class="card">
+                        <h2></h2>
+                        <h5>Blog Entry, Nov 25, 2024</h5>
+                        <p><sub>3:04 AM</sub></p>
+                        <div class="blogimg" style="height:200px;">
+                            <img 
+                                id="craneimg"
+                                src="images/INTERNSHIP/FLAAPPlogo.gif"
+                            >
+                        </div>
+                        <p>
+                            My internship is coming to a close. I'm happy to
+                            have graphics to add to my portfolio!!!
+                            I still have to fix the responsiveness on my site,,
+                        </p>
+                    </div>
+                    <div id="bearhr">
                     <div id="blog6" class="card">
                         <h2></h2>
                         <h5>Blog Entry, Oct 20, 2024</h5>
