--- a/portfolio/graphics.html
+++ b/portfolio/graphics.html
@@ -39,6 +39,12 @@
             <img src="images/bearhead.png">
         </div>
         <div id="graphics">
+            <a href="internship.html" id="internship">
+                <img 
+                    src="images/internship.gif"
+                    alt="internship"
+                >
+            </a>
             <a href="classwork.html" id="classwork">
                 <img 
                     src="images/classwork.gif"
