--- a/portfolio/animation.html
+++ b/portfolio/animation.html
@@ -67,9 +67,17 @@
                 <img id="cats" src="images/catlovers.gif">
                 <img id="spin" src="images/ok.gif">
                 <img id="cry" src="images/expression.gif">
+                <img id="butt" src="images/butt.gif">
             </div>
             <img id="bearhead" src="images/bearhead.png">
-            <h2>Internship</h2>
+            <h2>Short Animations</h2>
+            <div id="doodles">
+                <video width="905vw" controls>
+                    <source src="images/stream of electric consciousness_1.mp4" type="video/mp4">
+                </video>
+            </div>
+            <img id="bearhead" src="images/bearhead.png">
+            <h2>Internship (Florida Rising)</h2>
             <div id="crosswords">
                 <img id="crossword" src="images/INTERNSHIP/CROSSWORD4.gif">
                 <img id="crossword" src="images/INTERNSHIP/CROSSWORD3_ANSWERS.gif">
