--- a/portfolio/commissions.html
+++ b/portfolio/commissions.html
@@ -48,6 +48,11 @@
                 src="images/GlassairCommission.png"
                 alt="glassair commission"
             >
+            <img 
+                src="images/album.png"
+                alt="glassair commission"
+                width="500px"
+            >
         </div>
         <div id="audio3">
             <audio controls autoplay loop id="lowaudio">
