--- a/portfolio/illustrations.html
+++ b/portfolio/illustrations.html
@@ -59,6 +59,12 @@
                     <img id="catboy" src="images/Artfight3.png">
                 </div>
             </div>
+            <img id="wow" src="images/wow.png">
+            <div id="personaartwork">
+                <img id="me" src="images/me.png">
+                <img id="sad" src="images/PFP.png">
+                <img id="sad" src="images/SAD.png">
+            </div>
         </div>
         <div id="audio3">
             <audio controls autoplay loop id="lowaudio">
